src/index.css
body{
	margin: 0;
	padding: 0;
	background-image: url(./assets/londonRest.png);
	overflow: none;
	background-size: cover;
	background-repeat: no-repeat;
	
	
}

header{
	display: flex;
	background: #481d1de4;
	height: 150px;
	justify-content: center;
	align-items: center;
}

nav{
	display: flex;
	gap: 30px;
}

button{
	padding: 10px;
	width: 100px;
	border-radius: 5px;
	background-color: #3d1717;
	color: #fff;
}

#content{
	margin-top: 20px;
	display: flex;
	align-items: left;
	background-image: cover;
	flex-direction: column;
	background: #481d1de4;
	width:50%;
	height: 80%;
	color: white;
	padding: 20px 20px;
	gap: 25px;


}

#content h1, p img{
	padding: 20px 20px;
}

main{
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100%;
}

.size{
	height:100px;
	width:100px;
}


.menuBox{
	display: flex;
	justify-content: left;
	align-items: left;

}

